Unify Verity data plane in Go
